fix bug: 405 error add 'Allow GET'